version/0.12/_sources/api/solver/_autosummary/settings/setup.rst.txt
:orphan:

.. _setup:

setup
=====

.. currentmodule:: ansys.fluent.core.solver.settings_231.setup

.. autoclass:: setup
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==================================================   =================================

Child                                                                          Summary

==================================================   =================================
:ref:`general <general>`                                              'general' child.

:ref:`models <models_1>`                                               'models' child.

:ref:`materials <materials>`                                        'materials' child.

:ref:`cell_zone_conditions <cell_zone_conditions>`       'cell_zone_conditions' child.

:ref:`boundary_conditions <boundary_conditions>`          'boundary_conditions' child.

:ref:`reference_values <reference_values>`                   'reference_values' child.

:ref:`named_expressions <named_expressions>`                'named_expressions' child.

==================================================   =================================

.. rubric:: Included in:

==================   ==================

Parent                          Summary

==================   ==================
:ref:`root <root>`       'root' object.

==================   ==================

